--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <main>
     <img src="assets/images/avatar-jessica.jpeg" alt="profil picture">
-    <p class="name">Jessica Randall</p>
+    <h1 class="name">Jessica Randall</h1>
     <p class="place"> London, United Kingdom</p>
     <p class="title"> "Front-end developer and avid reader."</p>
 
